--- a/projects/02-HTML-Fundamentals/blog.html
+++ b/projects/02-HTML-Fundamentals/blog.html
@@ -7,7 +7,7 @@
     <title>Blog</title>
   </head>
   <body>
-    <h2>Blog</h2>
+    <h2>Blog Bozo Page</h2>
     <a href="./index.html">Back To Home</a>
   </body>
 </html>
