--- a/projects/03-CSS/index.html
+++ b/projects/03-CSS/index.html
@@ -1,40 +1,43 @@
-<!--  -->
-<!--  -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>The Basic Language of the Web: HTML</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
-        <a href="./blog.html">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
+
+      <!-- <p>Test Paragraph</p> -->
     </header>
 
     <article>
+      <!-- <p>Test</p> -->
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
-          src="./img/laura-jones.jpg"
+          src="img/laura-jones.jpg"
           alt="Headshot of Laura Jones"
           height="50"
           width="50"
         />
 
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
 
         <img
-          src="./img/post-img.jpg"
+          src="img/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -65,26 +68,24 @@
         paragraphs, links, headings, images, video, etc. Web browsers understand
         HTML and render HTML code as websites.
       </p>
-
       <p>In HTML, each element is made up of 3 parts:</p>
 
       <ol>
-        <li>The opening tag</li>
+        <li class="first-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
 
       <p>
-        You can learn more at the
-
+        You can learn more at
         <a
           href="https://developer.mozilla.org/en-US/docs/Web/HTML"
           target="_blank"
           >MDN Web Docs</a
-        >
+        >.
       </p>
 
-      <h3>Why should you learn HTML</h3>
+      <h3>Why should you learn HTML?</h3>
 
       <p>
         There are countless reasons for learning the fundamental language of the
@@ -92,7 +93,9 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">
+          To be able to use the fundamental web dev language
+        </li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
@@ -101,34 +104,44 @@
         <li>To impress friends</li>
         <li>To have fun 😃</li>
       </ul>
+
+      <p>Hopefully you learned something new here. See you next time!</p>
     </article>
 
     <aside>
-      <h4>Related Posts</h4>
-      <ul>
+      <h4>Related posts</h4>
+
+      <ul class="related">
         <li>
-          <img src="img/related-1.jpg" alt="Person" width="75" height="75" />
-          <a href="#">How to learn web development</a>
-          <p>Name 1</p>
+          <img
+            src="img/related-1.jpg"
+            alt="Person programming"
+            width="75"
+            width="75"
+          />
+          <a href="#">How to Learn Web Development</a>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
-          <img src="img/related-2.jpg" alt="CSS" width="75" height="75" />
-          <a href="#">The unknown powers of CSS</a>
-          <p>Name 2</p>
+          <img src="img/related-2.jpg" alt="Lightning" width="75" heigth="75" />
+          <a href="#">The Unknown Powers of CSS</a>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
             src="img/related-3.jpg"
-            alt="JavaScript"
+            alt="JavaScript code on a screen"
             width="75"
             height="75"
           />
-          <a href="#">Why Javascript is awesome</a>
-          <p>Name 3</p>
+          <a href="#">Why JavaScript is Awesome</a>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2027 by the Code Magazine</footer>
+    <footer>
+      <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
+    </footer>
   </body>
 </html>
