--- a/projects/03-CSS/index.html
+++ b/projects/03-CSS/index.html
@@ -11,6 +11,7 @@
       <h1>📘 The Code Magazine</h1>
 
       <nav>
+        <!-- <strong>This is the navigation</strong> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
@@ -141,7 +142,9 @@
     </aside>
 
     <footer>
-      <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
+      <p class="copyright text" id="copyright">
+        Copyright &copy; 2027 by The Code Magazine.
+      </p>
     </footer>
   </body>
 </html>
