--- a/projects/04-CSS-Layouts/css-grid.html
+++ b/projects/04-CSS-Layouts/css-grid.html
@@ -16,6 +16,7 @@
         background-color: green;
         height: 150px;
       }
+
       .el--4 {
         background-color: goldenrod;
       }
@@ -36,10 +37,34 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        display: none;
+        /* grid-template-rows: 300px 200px; */
+        /* grid-template-columns: auto 1fr 1fr auto; */
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        /* height: 500px; */
+        column-gap: 10px;
+        row-gap: 40px;
+      }
+
+      /* .el--6 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 4;
+      } */
+
+      .el--2 {
+        grid-column: 1 / -1;
+        grid-row: 2;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
       }
 
       .container--2 {
@@ -47,12 +72,25 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+        justify-content: center;
+        align-content: center;
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
@@ -64,7 +102,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
