--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <h1>HTML / CSS</h1>
-      <div class="link-container">
-        <a href="./projects/05-Design/index.html">1 - Chair Website</a>
-        <a href="#">2 - </a>
-        <a href="#">3 - </a>
-        <a href="#">4 - </a>
-        <a href="#">5 - </a>
-        <a href="#">6 - </a>
-        <a href="#">7 - </a>
-      </div>
+      <a href="./projects/06-Components/01-accordion.html">1 - Accordion</a>
     </div>
   </body>
 </html>
