--- a/projects/06-Components/01-accordion.html
+++ b/projects/06-Components/01-accordion.html
@@ -37,20 +37,17 @@
 
       .accordion {
         width: 700px;
-        margin: 30px auto;
-      }
+        margin: 100px auto;
 
-      .accordion:nth-child(1) {
-        margin-top: 100px;
-      }
-
-      .accordion:nth-child(2) {
-        border-top: 7px solid #087f5b;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
       }
 
       .item {
-        box-shadow: 0 0 32px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 0 32px rgba(0, 0, 0, 0.2);
         padding: 24px;
+
         display: grid;
         grid-template-columns: auto 1fr auto;
         column-gap: 24px;
@@ -62,7 +59,11 @@
       .text {
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
+      }
+
+      .number {
+        color: #ced4da;
       }
 
       .icon {
@@ -73,6 +74,7 @@
 
       .hidden-box {
         grid-column: 2;
+        display: none;
       }
 
       .hidden-box p {
@@ -82,11 +84,24 @@
 
       .hidden-box ul {
         color: #868e96;
-        margin-left: 20px;
+        margin-left: 18px;
 
         display: flex;
         flex-direction: column;
         gap: 12px;
+      }
+
+      .open {
+        border-top: 4px solid #087f5b;
+      }
+
+      .open .hidden-box {
+        display: block;
+      }
+
+      .open .number,
+      .open .text {
+        color: #087f5b;
       }
     </style>
   </head>
@@ -94,7 +109,7 @@
     <div class="accordion">
       <div class="item">
         <p class="number">01</p>
-        <p class="text">Where are these chairs assembled?</p>
+        <p class="text">Wher are these chairs assembled?</p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon"
@@ -109,26 +124,22 @@
             d="M19 9l-7 7-7-7"
           />
         </svg>
-        <!-- <div class="hidden-box">
+        <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem necessitatibus doloremque iusto nulla ex dicta
-            reiciendis, fuga magnam maiores, obcaecati quasi amet molestiae ut
-            expedita dolorem nihil quidem eligendi voluptatum!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+            distinctio iste maxime architecto repellat, ab qui ea porro ad
+            eligendi nisi officiis commodi aliquid labore velit. Perspiciatis
+            quos magnam ducimus.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>dolor sit amet consectetur adipisicing elit. Rem, ipsa?</li>
-            <li>
-              Lorem sit, consectetur adipisicing. Consequuntur repudiandae!
-            </li>
-            <li>sit, consectetur adipisicing. Consequuntur repudiandae!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
           </ul>
-        </div> -->
+        </div>
       </div>
-    </div>
-    <div class="accordion">
-      <div class="item">
+      <div class="item open">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair</p>
         <svg
@@ -147,23 +158,19 @@
         </svg>
         <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem necessitatibus doloremque iusto nulla ex dicta
-            reiciendis, fuga magnam maiores, obcaecati quasi amet molestiae ut
-            expedita dolorem nihil quidem eligendi voluptatum!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+            distinctio iste maxime architecto repellat, ab qui ea porro ad
+            eligendi nisi officiis commodi aliquid labore velit. Perspiciatis
+            quos magnam ducimus.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>dolor sit amet consectetur adipisicing elit. Rem, ipsa?</li>
-            <li>
-              Lorem sit, consectetur adipisicing. Consequuntur repudiandae!
-            </li>
-            <li>sit, consectetur adipisicing. Consequuntur repudiandae!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
       </div>
-    </div>
-    <div class="accordion">
       <div class="item">
         <p class="number">03</p>
         <p class="text">Do you ship to countries outside the EU?</p>
@@ -181,22 +188,20 @@
             d="M19 9l-7 7-7-7"
           />
         </svg>
-        <!-- <div class="hidden-box">
+        <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem necessitatibus doloremque iusto nulla ex dicta
-            reiciendis, fuga magnam maiores, obcaecati quasi amet molestiae ut
-            expedita dolorem nihil quidem eligendi voluptatum!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+            distinctio iste maxime architecto repellat, ab qui ea porro ad
+            eligendi nisi officiis commodi aliquid labore velit. Perspiciatis
+            quos magnam ducimus.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>dolor sit amet consectetur adipisicing elit. Rem, ipsa?</li>
-            <li>
-              Lorem sit, consectetur adipisicing. Consequuntur repudiandae!
-            </li>
-            <li>sit, consectetur adipisicing. Consequuntur repudiandae!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </div>
   </body>
