--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <title>Document</title>
   </head>
   <body>
+    <header></header>
     <div class="container">
       <a href="./projects/06-Components/01-accordion.html">1 - Accordion</a>
+      <a href="./projects/06-Components/02-carousel.html">2 - Carousel</a>
     </div>
+    <section></section>
   </body>
 </html>
