--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="container">
       <a href="./projects/06-Components/01-accordion.html">1 - Accordion</a>
       <a href="./projects/06-Components/02-carousel.html">2 - Carousel</a>
+      <a href="./projects/06-Components/03-table.html">3 - Table</a>
+      <a href="./projects/06-Components/04-pagination.html">4 - Pagination</a>
     </div>
     <section></section>
   </body>
