--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="./projects/06-Components/02-carousel.html">2 - Carousel</a>
       <a href="./projects/06-Components/03-table.html">3 - Table</a>
       <a href="./projects/06-Components/04-pagination.html">4 - Pagination</a>
+      <a href="./projects/06-Components/05-hero.html">5 - Hero</a>
     </div>
     <section></section>
   </body>
