--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="./projects/06-Components/03-table.html">3 - Table</a>
       <a href="./projects/06-Components/04-pagination.html">4 - Pagination</a>
       <a href="./projects/06-Components/05-hero.html">5 - Hero</a>
+      <a href="./projects/06-Components/06-app-layout.html">6 - Layout</a>
     </div>
     <section></section>
   </body>
